--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "pm2-poc",
+  "name": "harperdb-coding-challenge",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "start": "npx pm2 start ecosystem.config.js",
-    "stop": "npx pm2 stop all",
-    "status": "npx pm2 status"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
+    "fastify": "^3.20.1",
     "pm2": "^5.1.0"
   }
 }
